--- a/codelab2.css
+++ b/codelab2.css
@@ -1,14 +1,14 @@
 body{
-    background-color: rgb(191, 0, 255);
+    background-color: rgb(185, 192, 211);
 }
 
 .form-container {
-    background-color: white;
+    background-color: rgb(0, 145, 255);
     max-width: 500px;
     margin: 100px auto;
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 10px;
 }
 
 .form-group {
@@ -19,24 +19,24 @@ input[type="text"],
 input[type="email"]{
     width: 90%;
     padding: 10px;
-    border: 1px solid rgb(191, 0, 255);
-    background-color: #00fff2;
-    border-radius: 3px;
+    border: 1px solid #000000;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
 }
 
 textarea{
     width: 90%;
     height: 400px;
     padding: 10px;
-    border: 1px solid rgb(191, 0, 255);
-    background-color: #00fff2;
-    border-radius: 3px;
+    border: 1px solid #000000;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
 }
 
 button {
-    background-color: rgb(191, 0, 255);
-    color: #fff;
-    border: none;
+    background-color: rgb(0, 195, 255);
+    color: #000000;
+    border: 1px solid;
     border-radius: 3px;
     padding: 10px 20px;
     cursor: pointer;
